@@ -33,6 +33,9 @@ tasks.named<BootBuildImage>("bootBuildImage") {
 				-O3
 				-J-XX:MaxRAMPercentage=80.0
 				-H:+CompactingOldGen
+                -H:+TrackPrimitiveValues
+                -H:+UsePredicates
+                -XX:+UseCompactObjectHeaders
 			""",
                     "BP_HEALTH_CHECKER_ENABLED" to "true"
             )
